// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prisma-relay-cursor-connection custom edge fields returns all todos 1`] = `
{
  "edges": [
    {
      "cursor": "id_01",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_01",
        "isCompleted": false,
        "text": "veritatis molestias qui",
      },
    },
    {
      "cursor": "id_02",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_02",
        "isCompleted": false,
        "text": "occaecati a dolor",
      },
    },
    {
      "cursor": "id_03",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_03",
        "isCompleted": false,
        "text": "ut enim quia",
      },
    },
    {
      "cursor": "id_04",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_04",
        "isCompleted": true,
        "text": "ipsam ipsam corrupti",
      },
    },
    {
      "cursor": "id_05",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_05",
        "isCompleted": true,
        "text": "voluptatem sint ipsam",
      },
    },
    {
      "cursor": "id_06",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_06",
        "isCompleted": true,
        "text": "ut sunt consequuntur",
      },
    },
    {
      "cursor": "id_07",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_07",
        "isCompleted": false,
        "text": "accusamus aut labore",
      },
    },
    {
      "cursor": "id_08",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_08",
        "isCompleted": true,
        "text": "et quo quia",
      },
    },
    {
      "cursor": "id_09",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_09",
        "isCompleted": true,
        "text": "accusantium a excepturi",
      },
    },
    {
      "cursor": "id_10",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_10",
        "isCompleted": true,
        "text": "deserunt rerum occaecati",
      },
    },
    {
      "cursor": "id_11",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_11",
        "isCompleted": false,
        "text": "unde et quasi",
      },
    },
    {
      "cursor": "id_12",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_12",
        "isCompleted": false,
        "text": "et autem sapiente",
      },
    },
    {
      "cursor": "id_13",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_13",
        "isCompleted": false,
        "text": "deleniti fuga et",
      },
    },
    {
      "cursor": "id_14",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_14",
        "isCompleted": true,
        "text": "ea molestiae similique",
      },
    },
    {
      "cursor": "id_15",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_15",
        "isCompleted": false,
        "text": "doloribus ea aut",
      },
    },
    {
      "cursor": "id_16",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_16",
        "isCompleted": true,
        "text": "ut molestias veniam",
      },
    },
    {
      "cursor": "id_17",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_17",
        "isCompleted": true,
        "text": "a placeat aperiam",
      },
    },
    {
      "cursor": "id_18",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_18",
        "isCompleted": true,
        "text": "quos rerum aut",
      },
    },
    {
      "cursor": "id_19",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_19",
        "isCompleted": false,
        "text": "ullam a voluptatem",
      },
    },
    {
      "cursor": "id_20",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_20",
        "isCompleted": true,
        "text": "dolorum deserunt quis",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "id_20",
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startCursor": "id_01",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection custom edge fields returns the first 5 todos 1`] = `
{
  "edges": [
    {
      "cursor": "id_01",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_01",
        "isCompleted": false,
        "text": "veritatis molestias qui",
      },
    },
    {
      "cursor": "id_02",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_02",
        "isCompleted": false,
        "text": "occaecati a dolor",
      },
    },
    {
      "cursor": "id_03",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_03",
        "isCompleted": false,
        "text": "ut enim quia",
      },
    },
    {
      "cursor": "id_04",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_04",
        "isCompleted": true,
        "text": "ipsam ipsam corrupti",
      },
    },
    {
      "cursor": "id_05",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_05",
        "isCompleted": true,
        "text": "voluptatem sint ipsam",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "id_05",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "id_01",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection custom edge fields returns the first 5 todos after the 1st todo 1`] = `
{
  "edges": [
    {
      "cursor": "id_02",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_02",
        "isCompleted": false,
        "text": "occaecati a dolor",
      },
    },
    {
      "cursor": "id_03",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_03",
        "isCompleted": false,
        "text": "ut enim quia",
      },
    },
    {
      "cursor": "id_04",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_04",
        "isCompleted": true,
        "text": "ipsam ipsam corrupti",
      },
    },
    {
      "cursor": "id_05",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_05",
        "isCompleted": true,
        "text": "voluptatem sint ipsam",
      },
    },
    {
      "cursor": "id_06",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_06",
        "isCompleted": true,
        "text": "ut sunt consequuntur",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "id_06",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "id_02",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection custom edge fields returns the first 5 todos after the 5th todo 1`] = `
{
  "edges": [
    {
      "cursor": "id_06",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_06",
        "isCompleted": true,
        "text": "ut sunt consequuntur",
      },
    },
    {
      "cursor": "id_07",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_07",
        "isCompleted": false,
        "text": "accusamus aut labore",
      },
    },
    {
      "cursor": "id_08",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_08",
        "isCompleted": true,
        "text": "et quo quia",
      },
    },
    {
      "cursor": "id_09",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_09",
        "isCompleted": true,
        "text": "accusantium a excepturi",
      },
    },
    {
      "cursor": "id_10",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_10",
        "isCompleted": true,
        "text": "deserunt rerum occaecati",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "id_10",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "id_06",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection custom edge fields returns the first 5 todos after the 15th todo 1`] = `
{
  "edges": [
    {
      "cursor": "id_16",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_16",
        "isCompleted": true,
        "text": "ut molestias veniam",
      },
    },
    {
      "cursor": "id_17",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_17",
        "isCompleted": true,
        "text": "a placeat aperiam",
      },
    },
    {
      "cursor": "id_18",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_18",
        "isCompleted": true,
        "text": "quos rerum aut",
      },
    },
    {
      "cursor": "id_19",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_19",
        "isCompleted": false,
        "text": "ullam a voluptatem",
      },
    },
    {
      "cursor": "id_20",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_20",
        "isCompleted": true,
        "text": "dolorum deserunt quis",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "id_20",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "id_16",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection custom edge fields returns the first 5 todos after the 16th todo 1`] = `
{
  "edges": [
    {
      "cursor": "id_17",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_17",
        "isCompleted": true,
        "text": "a placeat aperiam",
      },
    },
    {
      "cursor": "id_18",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_18",
        "isCompleted": true,
        "text": "quos rerum aut",
      },
    },
    {
      "cursor": "id_19",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_19",
        "isCompleted": false,
        "text": "ullam a voluptatem",
      },
    },
    {
      "cursor": "id_20",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_20",
        "isCompleted": true,
        "text": "dolorum deserunt quis",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "id_20",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "id_17",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection custom edge fields returns the first 5 todos after the 20th todo 1`] = `
{
  "edges": [],
  "pageInfo": {
    "endCursor": undefined,
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": undefined,
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection custom edge fields returns the last 5 todos 1`] = `
{
  "edges": [
    {
      "cursor": "id_16",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_16",
        "isCompleted": true,
        "text": "ut molestias veniam",
      },
    },
    {
      "cursor": "id_17",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_17",
        "isCompleted": true,
        "text": "a placeat aperiam",
      },
    },
    {
      "cursor": "id_18",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_18",
        "isCompleted": true,
        "text": "quos rerum aut",
      },
    },
    {
      "cursor": "id_19",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_19",
        "isCompleted": false,
        "text": "ullam a voluptatem",
      },
    },
    {
      "cursor": "id_20",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_20",
        "isCompleted": true,
        "text": "dolorum deserunt quis",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "id_20",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "id_16",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection custom edge fields returns the last 5 todos before the 1st todo 1`] = `
{
  "edges": [],
  "pageInfo": {
    "endCursor": undefined,
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": undefined,
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection custom edge fields returns the last 5 todos before the 5th todo 1`] = `
{
  "edges": [
    {
      "cursor": "id_01",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_01",
        "isCompleted": false,
        "text": "veritatis molestias qui",
      },
    },
    {
      "cursor": "id_02",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_02",
        "isCompleted": false,
        "text": "occaecati a dolor",
      },
    },
    {
      "cursor": "id_03",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_03",
        "isCompleted": false,
        "text": "ut enim quia",
      },
    },
    {
      "cursor": "id_04",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_04",
        "isCompleted": true,
        "text": "ipsam ipsam corrupti",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "id_04",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "id_01",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection custom edge fields returns the last 5 todos before the 6th todo 1`] = `
{
  "edges": [
    {
      "cursor": "id_01",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_01",
        "isCompleted": false,
        "text": "veritatis molestias qui",
      },
    },
    {
      "cursor": "id_02",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_02",
        "isCompleted": false,
        "text": "occaecati a dolor",
      },
    },
    {
      "cursor": "id_03",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_03",
        "isCompleted": false,
        "text": "ut enim quia",
      },
    },
    {
      "cursor": "id_04",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_04",
        "isCompleted": true,
        "text": "ipsam ipsam corrupti",
      },
    },
    {
      "cursor": "id_05",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_05",
        "isCompleted": true,
        "text": "voluptatem sint ipsam",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "id_05",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "id_01",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection custom edge fields returns the last 5 todos before the 16th todo 1`] = `
{
  "edges": [
    {
      "cursor": "id_11",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_11",
        "isCompleted": false,
        "text": "unde et quasi",
      },
    },
    {
      "cursor": "id_12",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_12",
        "isCompleted": false,
        "text": "et autem sapiente",
      },
    },
    {
      "cursor": "id_13",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_13",
        "isCompleted": false,
        "text": "deleniti fuga et",
      },
    },
    {
      "cursor": "id_14",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_14",
        "isCompleted": true,
        "text": "ea molestiae similique",
      },
    },
    {
      "cursor": "id_15",
      "extraEdgeField": "Bar",
      "node": {
        "extraNodeField": "Foo",
        "id": "id_15",
        "isCompleted": false,
        "text": "doloribus ea aut",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "id_15",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "id_11",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection custom edge fields returns the paginated todos with the base client (sanity check) 1`] = `
[
  {
    "id": "id_06",
    "isCompleted": true,
    "text": "ut sunt consequuntur",
  },
  {
    "id": "id_07",
    "isCompleted": false,
    "text": "accusamus aut labore",
  },
  {
    "id": "id_08",
    "isCompleted": true,
    "text": "et quo quia",
  },
  {
    "id": "id_09",
    "isCompleted": true,
    "text": "accusantium a excepturi",
  },
  {
    "id": "id_10",
    "isCompleted": true,
    "text": "deserunt rerum occaecati",
  },
]
`;

exports[`prisma-relay-cursor-connection invalid arguments errors for invalid arguments (after with last) 1`] = `[Error: "after" needs to be used with "first"]`;

exports[`prisma-relay-cursor-connection invalid arguments errors for invalid arguments (after without first) 1`] = `[Error: "after" needs to be used with "first"]`;

exports[`prisma-relay-cursor-connection invalid arguments errors for invalid arguments (before with first) 1`] = `[Error: "before" needs to be used with "last"]`;

exports[`prisma-relay-cursor-connection invalid arguments errors for invalid arguments (before without last) 1`] = `[Error: "before" needs to be used with "last"]`;

exports[`prisma-relay-cursor-connection invalid arguments errors for invalid arguments (both after & before with first) 1`] = `[Error: Only one of "after" and "before" can be set]`;

exports[`prisma-relay-cursor-connection invalid arguments errors for invalid arguments (both after & before) 1`] = `[Error: Only one of "after" and "before" can be set]`;

exports[`prisma-relay-cursor-connection invalid arguments errors for invalid arguments (both first & last) 1`] = `[Error: Only one of "first" and "last" can be set]`;

exports[`prisma-relay-cursor-connection invalid arguments errors for invalid arguments (kitchensink) 1`] = `[Error: Only one of "first" and "last" can be set]`;

exports[`prisma-relay-cursor-connection invalid arguments errors for invalid arguments (negative first) 1`] = `[Error: "first" has to be positive]`;

exports[`prisma-relay-cursor-connection invalid arguments errors for invalid arguments (negative last) 1`] = `[Error: "last" has to be positive]`;

exports[`prisma-relay-cursor-connection multi field id returns the first 5 profiles 1`] = `
{
  "edges": [
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMSIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
      "node": {
        "firstname": "foo1",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTAiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
      "node": {
        "firstname": "foo10",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTEiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
      "node": {
        "firstname": "foo11",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTIiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
      "node": {
        "firstname": "foo12",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTMiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
      "node": {
        "firstname": "foo13",
        "lastname": "bar1",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTMiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMSIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection multi field id returns the first 5 profiles after the 1st profile 1`] = `
{
  "edges": [
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTAiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
      "node": {
        "firstname": "foo10",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTEiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
      "node": {
        "firstname": "foo11",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTIiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
      "node": {
        "firstname": "foo12",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTMiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
      "node": {
        "firstname": "foo13",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTQiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
      "node": {
        "firstname": "foo14",
        "lastname": "bar1",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTQiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTAiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection multi field id returns the first 5 profiles after the 5th profile 1`] = `
{
  "edges": [
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vNiIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
      "node": {
        "firstname": "foo6",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vNyIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
      "node": {
        "firstname": "foo7",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vOCIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
      "node": {
        "firstname": "foo8",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vOSIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
      "node": {
        "firstname": "foo9",
        "lastname": "bar1",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vOSIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vNiIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection multi field id returns the first 5 profiles after the 15th profile 1`] = `
{
  "edges": [
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTYiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
      "node": {
        "firstname": "foo16",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTciLCJsYXN0bmFtZSI6ImJhcjEifX0=",
      "node": {
        "firstname": "foo17",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTgiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
      "node": {
        "firstname": "foo18",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTkiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
      "node": {
        "firstname": "foo19",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMiIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
      "node": {
        "firstname": "foo2",
        "lastname": "bar1",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMiIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTYiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection multi field id returns the first 5 profiles after the 16th profile 1`] = `
{
  "edges": [
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTciLCJsYXN0bmFtZSI6ImJhcjEifX0=",
      "node": {
        "firstname": "foo17",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTgiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
      "node": {
        "firstname": "foo18",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTkiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
      "node": {
        "firstname": "foo19",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMiIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
      "node": {
        "firstname": "foo2",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMjAiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
      "node": {
        "firstname": "foo20",
        "lastname": "bar1",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMjAiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTciLCJsYXN0bmFtZSI6ImJhcjEifX0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection multi field id returns the first 5 profiles after the 20th profile 1`] = `
{
  "edges": [
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMyIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
      "node": {
        "firstname": "foo3",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vNCIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
      "node": {
        "firstname": "foo4",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vNSIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
      "node": {
        "firstname": "foo5",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vNiIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
      "node": {
        "firstname": "foo6",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vNyIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
      "node": {
        "firstname": "foo7",
        "lastname": "bar1",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vNyIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMyIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection multi field id returns the last 5 profiles before the 1st profile 1`] = `
{
  "edges": [],
  "pageInfo": {
    "endCursor": undefined,
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": undefined,
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection multi field id returns the last 5 profiles before the 5th profile 1`] = `
{
  "edges": [
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTkiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
      "node": {
        "firstname": "foo19",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMiIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
      "node": {
        "firstname": "foo2",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMjAiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
      "node": {
        "firstname": "foo20",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMyIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
      "node": {
        "firstname": "foo3",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vNCIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
      "node": {
        "firstname": "foo4",
        "lastname": "bar1",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vNCIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTkiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection multi field id returns the last 5 profiles before the 6th profile 1`] = `
{
  "edges": [
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMiIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
      "node": {
        "firstname": "foo2",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMjAiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
      "node": {
        "firstname": "foo20",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMyIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
      "node": {
        "firstname": "foo3",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vNCIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
      "node": {
        "firstname": "foo4",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vNSIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
      "node": {
        "firstname": "foo5",
        "lastname": "bar1",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vNSIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMiIsImxhc3RuYW1lIjoiYmFyMSJ9fQ==",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection multi field id returns the last 5 profiles before the 16th profile 1`] = `
{
  "edges": [
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTEiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
      "node": {
        "firstname": "foo11",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTIiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
      "node": {
        "firstname": "foo12",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTMiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
      "node": {
        "firstname": "foo13",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTQiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
      "node": {
        "firstname": "foo14",
        "lastname": "bar1",
      },
    },
    {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTUiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
      "node": {
        "firstname": "foo15",
        "lastname": "bar1",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTUiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTEiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection multi field id returns the paginated profiles with the base client (sanity check) 1`] = `
[
  {
    "firstname": "foo6",
    "lastname": "bar1",
  },
  {
    "firstname": "foo7",
    "lastname": "bar1",
  },
  {
    "firstname": "foo8",
    "lastname": "bar1",
  },
  {
    "firstname": "foo9",
    "lastname": "bar1",
  },
]
`;

exports[`prisma-relay-cursor-connection number id returns all users 1`] = `
{
  "edges": [
    {
      "cursor": "eyJpZCI6MX0=",
      "node": {
        "email": "user1@email.com",
        "id": 1,
      },
    },
    {
      "cursor": "eyJpZCI6Mn0=",
      "node": {
        "email": "user2@email.com",
        "id": 2,
      },
    },
    {
      "cursor": "eyJpZCI6M30=",
      "node": {
        "email": "user3@email.com",
        "id": 3,
      },
    },
    {
      "cursor": "eyJpZCI6NH0=",
      "node": {
        "email": "user4@email.com",
        "id": 4,
      },
    },
    {
      "cursor": "eyJpZCI6NX0=",
      "node": {
        "email": "user5@email.com",
        "id": 5,
      },
    },
    {
      "cursor": "eyJpZCI6Nn0=",
      "node": {
        "email": "user6@email.com",
        "id": 6,
      },
    },
    {
      "cursor": "eyJpZCI6N30=",
      "node": {
        "email": "user7@email.com",
        "id": 7,
      },
    },
    {
      "cursor": "eyJpZCI6OH0=",
      "node": {
        "email": "user8@email.com",
        "id": 8,
      },
    },
    {
      "cursor": "eyJpZCI6OX0=",
      "node": {
        "email": "user9@email.com",
        "id": 9,
      },
    },
    {
      "cursor": "eyJpZCI6MTB9",
      "node": {
        "email": "user10@email.com",
        "id": 10,
      },
    },
    {
      "cursor": "eyJpZCI6MTF9",
      "node": {
        "email": "user11@email.com",
        "id": 11,
      },
    },
    {
      "cursor": "eyJpZCI6MTJ9",
      "node": {
        "email": "user12@email.com",
        "id": 12,
      },
    },
    {
      "cursor": "eyJpZCI6MTN9",
      "node": {
        "email": "user13@email.com",
        "id": 13,
      },
    },
    {
      "cursor": "eyJpZCI6MTR9",
      "node": {
        "email": "user14@email.com",
        "id": 14,
      },
    },
    {
      "cursor": "eyJpZCI6MTV9",
      "node": {
        "email": "user15@email.com",
        "id": 15,
      },
    },
    {
      "cursor": "eyJpZCI6MTZ9",
      "node": {
        "email": "user16@email.com",
        "id": 16,
      },
    },
    {
      "cursor": "eyJpZCI6MTd9",
      "node": {
        "email": "user17@email.com",
        "id": 17,
      },
    },
    {
      "cursor": "eyJpZCI6MTh9",
      "node": {
        "email": "user18@email.com",
        "id": 18,
      },
    },
    {
      "cursor": "eyJpZCI6MTl9",
      "node": {
        "email": "user19@email.com",
        "id": 19,
      },
    },
    {
      "cursor": "eyJpZCI6MjB9",
      "node": {
        "email": "user20@email.com",
        "id": 20,
      },
    },
  ],
  "pageInfo": {
    "endCursor": "eyJpZCI6MjB9",
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startCursor": "eyJpZCI6MX0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection number id returns the first 5 users 1`] = `
{
  "edges": [
    {
      "cursor": "eyJpZCI6MX0=",
      "node": {
        "email": "user1@email.com",
        "id": 1,
      },
    },
    {
      "cursor": "eyJpZCI6Mn0=",
      "node": {
        "email": "user2@email.com",
        "id": 2,
      },
    },
    {
      "cursor": "eyJpZCI6M30=",
      "node": {
        "email": "user3@email.com",
        "id": 3,
      },
    },
    {
      "cursor": "eyJpZCI6NH0=",
      "node": {
        "email": "user4@email.com",
        "id": 4,
      },
    },
    {
      "cursor": "eyJpZCI6NX0=",
      "node": {
        "email": "user5@email.com",
        "id": 5,
      },
    },
  ],
  "pageInfo": {
    "endCursor": "eyJpZCI6NX0=",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "eyJpZCI6MX0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection number id returns the first 5 users after the 1st user 1`] = `
{
  "edges": [
    {
      "cursor": "eyJpZCI6Mn0=",
      "node": {
        "email": "user2@email.com",
        "id": 2,
      },
    },
    {
      "cursor": "eyJpZCI6M30=",
      "node": {
        "email": "user3@email.com",
        "id": 3,
      },
    },
    {
      "cursor": "eyJpZCI6NH0=",
      "node": {
        "email": "user4@email.com",
        "id": 4,
      },
    },
    {
      "cursor": "eyJpZCI6NX0=",
      "node": {
        "email": "user5@email.com",
        "id": 5,
      },
    },
    {
      "cursor": "eyJpZCI6Nn0=",
      "node": {
        "email": "user6@email.com",
        "id": 6,
      },
    },
  ],
  "pageInfo": {
    "endCursor": "eyJpZCI6Nn0=",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "eyJpZCI6Mn0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection number id returns the first 5 users after the 5th user 1`] = `
{
  "edges": [
    {
      "cursor": "eyJpZCI6Nn0=",
      "node": {
        "email": "user6@email.com",
        "id": 6,
      },
    },
    {
      "cursor": "eyJpZCI6N30=",
      "node": {
        "email": "user7@email.com",
        "id": 7,
      },
    },
    {
      "cursor": "eyJpZCI6OH0=",
      "node": {
        "email": "user8@email.com",
        "id": 8,
      },
    },
    {
      "cursor": "eyJpZCI6OX0=",
      "node": {
        "email": "user9@email.com",
        "id": 9,
      },
    },
    {
      "cursor": "eyJpZCI6MTB9",
      "node": {
        "email": "user10@email.com",
        "id": 10,
      },
    },
  ],
  "pageInfo": {
    "endCursor": "eyJpZCI6MTB9",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "eyJpZCI6Nn0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection number id returns the first 5 users after the 15th user 1`] = `
{
  "edges": [
    {
      "cursor": "eyJpZCI6MTZ9",
      "node": {
        "email": "user16@email.com",
        "id": 16,
      },
    },
    {
      "cursor": "eyJpZCI6MTd9",
      "node": {
        "email": "user17@email.com",
        "id": 17,
      },
    },
    {
      "cursor": "eyJpZCI6MTh9",
      "node": {
        "email": "user18@email.com",
        "id": 18,
      },
    },
    {
      "cursor": "eyJpZCI6MTl9",
      "node": {
        "email": "user19@email.com",
        "id": 19,
      },
    },
    {
      "cursor": "eyJpZCI6MjB9",
      "node": {
        "email": "user20@email.com",
        "id": 20,
      },
    },
  ],
  "pageInfo": {
    "endCursor": "eyJpZCI6MjB9",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "eyJpZCI6MTZ9",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection number id returns the first 5 users after the 16th user 1`] = `
{
  "edges": [
    {
      "cursor": "eyJpZCI6MTd9",
      "node": {
        "email": "user17@email.com",
        "id": 17,
      },
    },
    {
      "cursor": "eyJpZCI6MTh9",
      "node": {
        "email": "user18@email.com",
        "id": 18,
      },
    },
    {
      "cursor": "eyJpZCI6MTl9",
      "node": {
        "email": "user19@email.com",
        "id": 19,
      },
    },
    {
      "cursor": "eyJpZCI6MjB9",
      "node": {
        "email": "user20@email.com",
        "id": 20,
      },
    },
  ],
  "pageInfo": {
    "endCursor": "eyJpZCI6MjB9",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "eyJpZCI6MTd9",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection number id returns the first 5 users after the 20th user 1`] = `
{
  "edges": [],
  "pageInfo": {
    "endCursor": undefined,
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": undefined,
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection number id returns the last 5 users 1`] = `
{
  "edges": [
    {
      "cursor": "eyJpZCI6MTZ9",
      "node": {
        "email": "user16@email.com",
        "id": 16,
      },
    },
    {
      "cursor": "eyJpZCI6MTd9",
      "node": {
        "email": "user17@email.com",
        "id": 17,
      },
    },
    {
      "cursor": "eyJpZCI6MTh9",
      "node": {
        "email": "user18@email.com",
        "id": 18,
      },
    },
    {
      "cursor": "eyJpZCI6MTl9",
      "node": {
        "email": "user19@email.com",
        "id": 19,
      },
    },
    {
      "cursor": "eyJpZCI6MjB9",
      "node": {
        "email": "user20@email.com",
        "id": 20,
      },
    },
  ],
  "pageInfo": {
    "endCursor": "eyJpZCI6MjB9",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "eyJpZCI6MTZ9",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection number id returns the last 5 users before the 1st user 1`] = `
{
  "edges": [],
  "pageInfo": {
    "endCursor": undefined,
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": undefined,
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection number id returns the last 5 users before the 5th user 1`] = `
{
  "edges": [
    {
      "cursor": "eyJpZCI6MX0=",
      "node": {
        "email": "user1@email.com",
        "id": 1,
      },
    },
    {
      "cursor": "eyJpZCI6Mn0=",
      "node": {
        "email": "user2@email.com",
        "id": 2,
      },
    },
    {
      "cursor": "eyJpZCI6M30=",
      "node": {
        "email": "user3@email.com",
        "id": 3,
      },
    },
    {
      "cursor": "eyJpZCI6NH0=",
      "node": {
        "email": "user4@email.com",
        "id": 4,
      },
    },
  ],
  "pageInfo": {
    "endCursor": "eyJpZCI6NH0=",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "eyJpZCI6MX0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection number id returns the last 5 users before the 6th user 1`] = `
{
  "edges": [
    {
      "cursor": "eyJpZCI6MX0=",
      "node": {
        "email": "user1@email.com",
        "id": 1,
      },
    },
    {
      "cursor": "eyJpZCI6Mn0=",
      "node": {
        "email": "user2@email.com",
        "id": 2,
      },
    },
    {
      "cursor": "eyJpZCI6M30=",
      "node": {
        "email": "user3@email.com",
        "id": 3,
      },
    },
    {
      "cursor": "eyJpZCI6NH0=",
      "node": {
        "email": "user4@email.com",
        "id": 4,
      },
    },
    {
      "cursor": "eyJpZCI6NX0=",
      "node": {
        "email": "user5@email.com",
        "id": 5,
      },
    },
  ],
  "pageInfo": {
    "endCursor": "eyJpZCI6NX0=",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "eyJpZCI6MX0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection number id returns the last 5 users before the 16th user 1`] = `
{
  "edges": [
    {
      "cursor": "eyJpZCI6MTF9",
      "node": {
        "email": "user11@email.com",
        "id": 11,
      },
    },
    {
      "cursor": "eyJpZCI6MTJ9",
      "node": {
        "email": "user12@email.com",
        "id": 12,
      },
    },
    {
      "cursor": "eyJpZCI6MTN9",
      "node": {
        "email": "user13@email.com",
        "id": 13,
      },
    },
    {
      "cursor": "eyJpZCI6MTR9",
      "node": {
        "email": "user14@email.com",
        "id": 14,
      },
    },
    {
      "cursor": "eyJpZCI6MTV9",
      "node": {
        "email": "user15@email.com",
        "id": 15,
      },
    },
  ],
  "pageInfo": {
    "endCursor": "eyJpZCI6MTV9",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "eyJpZCI6MTF9",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection number id returns the paginated users with the base client (sanity check) 1`] = `
[
  {
    "email": "user6@email.com",
    "id": 6,
  },
  {
    "email": "user7@email.com",
    "id": 7,
  },
  {
    "email": "user8@email.com",
    "id": 8,
  },
  {
    "email": "user9@email.com",
    "id": 9,
  },
  {
    "email": "user10@email.com",
    "id": 10,
  },
]
`;

exports[`prisma-relay-cursor-connection page based cursors returns all todos 1`] = `
Object {
  "manyArgs": Array [
    Object {},
    Object {
      "orderBy": Object {
        "id": "asc",
      },
      "take": 1,
    },
  ],
  "result": Object {
    "edges": Array [
      Object {
        "cursor": "cid_0",
        "node": Object {
          "id": "cid_0",
          "isCompleted": false,
          "text": "veritatis molestias qui",
        },
      },
      Object {
        "cursor": "cid_1",
        "node": Object {
          "id": "cid_1",
          "isCompleted": false,
          "text": "occaecati a dolor",
        },
      },
      Object {
        "cursor": "cid_2",
        "node": Object {
          "id": "cid_2",
          "isCompleted": false,
          "text": "ut enim quia",
        },
      },
      Object {
        "cursor": "cid_3",
        "node": Object {
          "id": "cid_3",
          "isCompleted": true,
          "text": "ipsam ipsam corrupti",
        },
      },
      Object {
        "cursor": "cid_4",
        "node": Object {
          "id": "cid_4",
          "isCompleted": true,
          "text": "voluptatem sint ipsam",
        },
      },
      Object {
        "cursor": "cid_5",
        "node": Object {
          "id": "cid_5",
          "isCompleted": true,
          "text": "ut sunt consequuntur",
        },
      },
      Object {
        "cursor": "cid_6",
        "node": Object {
          "id": "cid_6",
          "isCompleted": false,
          "text": "accusamus aut labore",
        },
      },
      Object {
        "cursor": "cid_7",
        "node": Object {
          "id": "cid_7",
          "isCompleted": true,
          "text": "et quo quia",
        },
      },
      Object {
        "cursor": "cid_8",
        "node": Object {
          "id": "cid_8",
          "isCompleted": true,
          "text": "accusantium a excepturi",
        },
      },
      Object {
        "cursor": "cid_9",
        "node": Object {
          "id": "cid_9",
          "isCompleted": true,
          "text": "deserunt rerum occaecati",
        },
      },
      Object {
        "cursor": "cid_10",
        "node": Object {
          "id": "cid_10",
          "isCompleted": false,
          "text": "unde et quasi",
        },
      },
      Object {
        "cursor": "cid_011",
        "node": Object {
          "id": "cid_011",
          "isCompleted": false,
          "text": "et autem sapiente",
        },
      },
      Object {
        "cursor": "cid_012",
        "node": Object {
          "id": "cid_012",
          "isCompleted": false,
          "text": "deleniti fuga et",
        },
      },
      Object {
        "cursor": "cid_013",
        "node": Object {
          "id": "cid_013",
          "isCompleted": true,
          "text": "ea molestiae similique",
        },
      },
      Object {
        "cursor": "cid_014",
        "node": Object {
          "id": "cid_014",
          "isCompleted": false,
          "text": "doloribus ea aut",
        },
      },
      Object {
        "cursor": "cid_015",
        "node": Object {
          "id": "cid_015",
          "isCompleted": true,
          "text": "ut molestias veniam",
        },
      },
      Object {
        "cursor": "cid_016",
        "node": Object {
          "id": "cid_016",
          "isCompleted": true,
          "text": "a placeat aperiam",
        },
      },
      Object {
        "cursor": "cid_017",
        "node": Object {
          "id": "cid_017",
          "isCompleted": true,
          "text": "quos rerum aut",
        },
      },
      Object {
        "cursor": "cid_018",
        "node": Object {
          "id": "cid_018",
          "isCompleted": false,
          "text": "ullam a voluptatem",
        },
      },
      Object {
        "cursor": "cid_019",
        "node": Object {
          "id": "cid_019",
          "isCompleted": true,
          "text": "dolorum deserunt quis",
        },
      },
    ],
    "pageCursors": Object {
      "around": Array [
        Object {
          "cursor": "1-cid_0",
          "isCurrent": true,
          "page": 1,
        },
        Object {
          "cursor": "2-cid_0",
          "isCurrent": false,
          "page": 2,
        },
      ],
    },
    "pageInfo": Object {
      "endCursor": "cid_019",
      "hasNextPage": false,
      "hasPreviousPage": false,
      "startCursor": "cid_0",
    },
    "totalCount": 20,
  },
}
`;

exports[`prisma-relay-cursor-connection page based cursors returns the 1st page after cid_11 1`] = `
Object {
  "manyArgs": Array [
    Object {
      "cursor": Object {
        "id": "cid_11",
      },
      "skip": 1,
      "take": 6,
    },
  ],
  "result": Object {
    "edges": Array [],
    "pageCursors": Object {
      "around": Array [
        Object {
          "cursor": "1-1-cid_11",
          "isCurrent": true,
          "page": 1,
        },
        Object {
          "cursor": "2-1-cid_11",
          "isCurrent": false,
          "page": 2,
        },
        Object {
          "cursor": "3-1-cid_11",
          "isCurrent": false,
          "page": 3,
        },
        Object {
          "cursor": "4-1-cid_11",
          "isCurrent": false,
          "page": 4,
        },
      ],
    },
    "pageInfo": Object {
      "endCursor": undefined,
      "hasNextPage": false,
      "hasPreviousPage": true,
      "startCursor": undefined,
    },
    "totalCount": 20,
  },
}
`;

exports[`prisma-relay-cursor-connection page based cursors returns the 2nd page after cid_11 1`] = `
Object {
  "manyArgs": Array [
    Object {
      "cursor": Object {
        "id": "cid_11",
      },
      "skip": 1,
      "take": 6,
    },
  ],
  "result": Object {
    "edges": Array [],
    "pageCursors": Object {
      "around": Array [
        Object {
          "cursor": "1-2-cid_11",
          "isCurrent": true,
          "page": 1,
        },
        Object {
          "cursor": "2-2-cid_11",
          "isCurrent": false,
          "page": 2,
        },
        Object {
          "cursor": "3-2-cid_11",
          "isCurrent": false,
          "page": 3,
        },
        Object {
          "cursor": "4-2-cid_11",
          "isCurrent": false,
          "page": 4,
        },
      ],
    },
    "pageInfo": Object {
      "endCursor": undefined,
      "hasNextPage": false,
      "hasPreviousPage": true,
      "startCursor": undefined,
    },
    "totalCount": 20,
  },
}
`;

exports[`prisma-relay-cursor-connection page based cursors returns the 2nd page before cid_11 1`] = `
Object {
  "manyArgs": Array [
    Object {
      "cursor": Object {
        "id": "cid_11",
      },
      "skip": 1,
      "take": -6,
    },
  ],
  "result": Object {
    "edges": Array [],
    "pageCursors": Object {
      "around": Array [
        Object {
          "cursor": "1-2-cid_11",
          "isCurrent": true,
          "page": 1,
        },
        Object {
          "cursor": "2-2-cid_11",
          "isCurrent": false,
          "page": 2,
        },
        Object {
          "cursor": "3-2-cid_11",
          "isCurrent": false,
          "page": 3,
        },
        Object {
          "cursor": "4-2-cid_11",
          "isCurrent": false,
          "page": 4,
        },
      ],
    },
    "pageInfo": Object {
      "endCursor": undefined,
      "hasNextPage": true,
      "hasPreviousPage": false,
      "startCursor": undefined,
    },
    "totalCount": 20,
  },
}
`;

exports[`prisma-relay-cursor-connection page based cursors returns the 3rd page after cid_11 1`] = `
Object {
  "manyArgs": Array [
    Object {
      "cursor": Object {
        "id": "cid_11",
      },
      "skip": 1,
      "take": 6,
    },
  ],
  "result": Object {
    "edges": Array [],
    "pageCursors": Object {
      "around": Array [
        Object {
          "cursor": "1-3-cid_11",
          "isCurrent": true,
          "page": 1,
        },
        Object {
          "cursor": "2-3-cid_11",
          "isCurrent": false,
          "page": 2,
        },
        Object {
          "cursor": "3-3-cid_11",
          "isCurrent": false,
          "page": 3,
        },
        Object {
          "cursor": "4-3-cid_11",
          "isCurrent": false,
          "page": 4,
        },
      ],
    },
    "pageInfo": Object {
      "endCursor": undefined,
      "hasNextPage": false,
      "hasPreviousPage": true,
      "startCursor": undefined,
    },
    "totalCount": 20,
  },
}
`;

exports[`prisma-relay-cursor-connection page based cursors returns the 3rd page before cid_11 1`] = `
Object {
  "manyArgs": Array [
    Object {
      "cursor": Object {
        "id": "cid_11",
      },
      "skip": 1,
      "take": -6,
    },
  ],
  "result": Object {
    "edges": Array [],
    "pageCursors": Object {
      "around": Array [
        Object {
          "cursor": "1-3-cid_11",
          "isCurrent": true,
          "page": 1,
        },
        Object {
          "cursor": "2-3-cid_11",
          "isCurrent": false,
          "page": 2,
        },
        Object {
          "cursor": "3-3-cid_11",
          "isCurrent": false,
          "page": 3,
        },
        Object {
          "cursor": "4-3-cid_11",
          "isCurrent": false,
          "page": 4,
        },
      ],
    },
    "pageInfo": Object {
      "endCursor": undefined,
      "hasNextPage": true,
      "hasPreviousPage": false,
      "startCursor": undefined,
    },
    "totalCount": 20,
  },
}
`;

exports[`prisma-relay-cursor-connection page based cursors returns the first 5 todos 1`] = `
Object {
  "manyArgs": Array [
    Object {
      "cursor": undefined,
      "skip": undefined,
      "take": 6,
    },
    Object {
      "orderBy": Object {
        "id": "desc",
      },
      "take": 1,
    },
  ],
  "result": Object {
    "edges": Array [
      Object {
        "cursor": "cid_0",
        "node": Object {
          "id": "cid_0",
          "isCompleted": false,
          "text": "veritatis molestias qui",
        },
      },
      Object {
        "cursor": "cid_011",
        "node": Object {
          "id": "cid_011",
          "isCompleted": false,
          "text": "et autem sapiente",
        },
      },
      Object {
        "cursor": "cid_012",
        "node": Object {
          "id": "cid_012",
          "isCompleted": false,
          "text": "deleniti fuga et",
        },
      },
      Object {
        "cursor": "cid_013",
        "node": Object {
          "id": "cid_013",
          "isCompleted": true,
          "text": "ea molestiae similique",
        },
      },
      Object {
        "cursor": "cid_014",
        "node": Object {
          "id": "cid_014",
          "isCompleted": false,
          "text": "doloribus ea aut",
        },
      },
    ],
    "pageCursors": Object {
      "around": Array [
        Object {
          "cursor": "1-cid_9",
          "isCurrent": true,
          "page": 1,
        },
        Object {
          "cursor": "2-cid_9",
          "isCurrent": false,
          "page": 2,
        },
        Object {
          "cursor": "3-cid_9",
          "isCurrent": false,
          "page": 3,
        },
        Object {
          "cursor": "4-cid_9",
          "isCurrent": false,
          "page": 4,
        },
      ],
    },
    "pageInfo": Object {
      "endCursor": "cid_014",
      "hasNextPage": true,
      "hasPreviousPage": false,
      "startCursor": "cid_0",
    },
    "totalCount": 20,
  },
}
`;

exports[`prisma-relay-cursor-connection page based cursors returns the first 5 todos after the 1st todo 1`] = `
Object {
  "manyArgs": Array [
    Object {
      "cursor": Object {
        "id": "cid_1",
      },
      "skip": 1,
      "take": 6,
    },
  ],
  "result": Object {
    "edges": Array [
      Object {
        "cursor": "cid_10",
        "node": Object {
          "id": "cid_10",
          "isCompleted": false,
          "text": "unde et quasi",
        },
      },
      Object {
        "cursor": "cid_2",
        "node": Object {
          "id": "cid_2",
          "isCompleted": false,
          "text": "ut enim quia",
        },
      },
      Object {
        "cursor": "cid_3",
        "node": Object {
          "id": "cid_3",
          "isCompleted": true,
          "text": "ipsam ipsam corrupti",
        },
      },
      Object {
        "cursor": "cid_4",
        "node": Object {
          "id": "cid_4",
          "isCompleted": true,
          "text": "voluptatem sint ipsam",
        },
      },
      Object {
        "cursor": "cid_5",
        "node": Object {
          "id": "cid_5",
          "isCompleted": true,
          "text": "ut sunt consequuntur",
        },
      },
    ],
    "pageCursors": Object {
      "around": Array [
        Object {
          "cursor": "1-cid_1",
          "isCurrent": true,
          "page": 1,
        },
        Object {
          "cursor": "2-cid_1",
          "isCurrent": false,
          "page": 2,
        },
        Object {
          "cursor": "3-cid_1",
          "isCurrent": false,
          "page": 3,
        },
        Object {
          "cursor": "4-cid_1",
          "isCurrent": false,
          "page": 4,
        },
      ],
    },
    "pageInfo": Object {
      "endCursor": "cid_5",
      "hasNextPage": true,
      "hasPreviousPage": true,
      "startCursor": "cid_10",
    },
    "totalCount": 20,
  },
}
`;

exports[`prisma-relay-cursor-connection page based cursors returns the first 5 todos after the 5th todo 1`] = `
Object {
  "manyArgs": Array [
    Object {
      "cursor": Object {
        "id": "cid_5",
      },
      "skip": 1,
      "take": 6,
    },
  ],
  "result": Object {
    "edges": Array [
      Object {
        "cursor": "cid_6",
        "node": Object {
          "id": "cid_6",
          "isCompleted": false,
          "text": "accusamus aut labore",
        },
      },
      Object {
        "cursor": "cid_7",
        "node": Object {
          "id": "cid_7",
          "isCompleted": true,
          "text": "et quo quia",
        },
      },
      Object {
        "cursor": "cid_8",
        "node": Object {
          "id": "cid_8",
          "isCompleted": true,
          "text": "accusantium a excepturi",
        },
      },
      Object {
        "cursor": "cid_9",
        "node": Object {
          "id": "cid_9",
          "isCompleted": true,
          "text": "deserunt rerum occaecati",
        },
      },
    ],
    "pageCursors": Object {
      "around": Array [
        Object {
          "cursor": "1-cid_5",
          "isCurrent": true,
          "page": 1,
        },
        Object {
          "cursor": "2-cid_5",
          "isCurrent": false,
          "page": 2,
        },
        Object {
          "cursor": "3-cid_5",
          "isCurrent": false,
          "page": 3,
        },
        Object {
          "cursor": "4-cid_5",
          "isCurrent": false,
          "page": 4,
        },
      ],
    },
    "pageInfo": Object {
      "endCursor": "cid_9",
      "hasNextPage": false,
      "hasPreviousPage": true,
      "startCursor": "cid_6",
    },
    "totalCount": 20,
  },
}
`;

exports[`prisma-relay-cursor-connection page based cursors returns the first 5 todos after the 15th todo 1`] = `
Object {
  "manyArgs": Array [
    Object {
      "cursor": Object {
        "id": "cid_15",
      },
      "skip": 1,
      "take": 6,
    },
  ],
  "result": Object {
    "edges": Array [],
    "pageCursors": Object {
      "around": Array [
        Object {
          "cursor": "1-cid_15",
          "isCurrent": true,
          "page": 1,
        },
        Object {
          "cursor": "2-cid_15",
          "isCurrent": false,
          "page": 2,
        },
        Object {
          "cursor": "3-cid_15",
          "isCurrent": false,
          "page": 3,
        },
        Object {
          "cursor": "4-cid_15",
          "isCurrent": false,
          "page": 4,
        },
      ],
    },
    "pageInfo": Object {
      "endCursor": undefined,
      "hasNextPage": false,
      "hasPreviousPage": true,
      "startCursor": undefined,
    },
    "totalCount": 20,
  },
}
`;

exports[`prisma-relay-cursor-connection page based cursors returns the first 5 todos after the 16th todo 1`] = `
Object {
  "manyArgs": Array [
    Object {
      "cursor": Object {
        "id": "cid_16",
      },
      "skip": 1,
      "take": 6,
    },
  ],
  "result": Object {
    "edges": Array [],
    "pageCursors": Object {
      "around": Array [
        Object {
          "cursor": "1-cid_16",
          "isCurrent": true,
          "page": 1,
        },
        Object {
          "cursor": "2-cid_16",
          "isCurrent": false,
          "page": 2,
        },
        Object {
          "cursor": "3-cid_16",
          "isCurrent": false,
          "page": 3,
        },
        Object {
          "cursor": "4-cid_16",
          "isCurrent": false,
          "page": 4,
        },
      ],
    },
    "pageInfo": Object {
      "endCursor": undefined,
      "hasNextPage": false,
      "hasPreviousPage": true,
      "startCursor": undefined,
    },
    "totalCount": 20,
  },
}
`;

exports[`prisma-relay-cursor-connection page based cursors returns the first 5 todos after the 20th todo 1`] = `
Object {
  "manyArgs": Array [
    Object {
      "cursor": Object {
        "id": "cid_20",
      },
      "skip": 1,
      "take": 6,
    },
  ],
  "result": Object {
    "edges": Array [],
    "pageCursors": Object {
      "around": Array [
        Object {
          "cursor": "1-cid_20",
          "isCurrent": true,
          "page": 1,
        },
        Object {
          "cursor": "2-cid_20",
          "isCurrent": false,
          "page": 2,
        },
        Object {
          "cursor": "3-cid_20",
          "isCurrent": false,
          "page": 3,
        },
        Object {
          "cursor": "4-cid_20",
          "isCurrent": false,
          "page": 4,
        },
      ],
    },
    "pageInfo": Object {
      "endCursor": undefined,
      "hasNextPage": false,
      "hasPreviousPage": true,
      "startCursor": undefined,
    },
    "totalCount": 20,
  },
}
`;

exports[`prisma-relay-cursor-connection page based cursors returns the last 5 todos 1`] = `
Object {
  "manyArgs": Array [
    Object {
      "cursor": undefined,
      "skip": undefined,
      "take": -6,
    },
    Object {
      "orderBy": Object {
        "id": "asc",
      },
      "take": 1,
    },
  ],
  "result": Object {
    "edges": Array [
      Object {
        "cursor": "cid_5",
        "node": Object {
          "id": "cid_5",
          "isCompleted": true,
          "text": "ut sunt consequuntur",
        },
      },
      Object {
        "cursor": "cid_6",
        "node": Object {
          "id": "cid_6",
          "isCompleted": false,
          "text": "accusamus aut labore",
        },
      },
      Object {
        "cursor": "cid_7",
        "node": Object {
          "id": "cid_7",
          "isCompleted": true,
          "text": "et quo quia",
        },
      },
      Object {
        "cursor": "cid_8",
        "node": Object {
          "id": "cid_8",
          "isCompleted": true,
          "text": "accusantium a excepturi",
        },
      },
      Object {
        "cursor": "cid_9",
        "node": Object {
          "id": "cid_9",
          "isCompleted": true,
          "text": "deserunt rerum occaecati",
        },
      },
    ],
    "pageCursors": Object {
      "around": Array [
        Object {
          "cursor": "1-cid_0",
          "isCurrent": true,
          "page": 1,
        },
        Object {
          "cursor": "2-cid_0",
          "isCurrent": false,
          "page": 2,
        },
        Object {
          "cursor": "3-cid_0",
          "isCurrent": false,
          "page": 3,
        },
        Object {
          "cursor": "4-cid_0",
          "isCurrent": false,
          "page": 4,
        },
      ],
    },
    "pageInfo": Object {
      "endCursor": "cid_9",
      "hasNextPage": false,
      "hasPreviousPage": true,
      "startCursor": "cid_5",
    },
    "totalCount": 20,
  },
}
`;

exports[`prisma-relay-cursor-connection page based cursors returns the last 5 todos before the 1st todo 1`] = `
Object {
  "manyArgs": Array [
    Object {
      "cursor": Object {
        "id": "cid_1",
      },
      "skip": 1,
      "take": -6,
    },
  ],
  "result": Object {
    "edges": Array [
      Object {
        "cursor": "cid_015",
        "node": Object {
          "id": "cid_015",
          "isCompleted": true,
          "text": "ut molestias veniam",
        },
      },
      Object {
        "cursor": "cid_016",
        "node": Object {
          "id": "cid_016",
          "isCompleted": true,
          "text": "a placeat aperiam",
        },
      },
      Object {
        "cursor": "cid_017",
        "node": Object {
          "id": "cid_017",
          "isCompleted": true,
          "text": "quos rerum aut",
        },
      },
      Object {
        "cursor": "cid_018",
        "node": Object {
          "id": "cid_018",
          "isCompleted": false,
          "text": "ullam a voluptatem",
        },
      },
      Object {
        "cursor": "cid_019",
        "node": Object {
          "id": "cid_019",
          "isCompleted": true,
          "text": "dolorum deserunt quis",
        },
      },
    ],
    "pageCursors": Object {
      "around": Array [
        Object {
          "cursor": "1-cid_1",
          "isCurrent": true,
          "page": 1,
        },
        Object {
          "cursor": "2-cid_1",
          "isCurrent": false,
          "page": 2,
        },
        Object {
          "cursor": "3-cid_1",
          "isCurrent": false,
          "page": 3,
        },
        Object {
          "cursor": "4-cid_1",
          "isCurrent": false,
          "page": 4,
        },
      ],
    },
    "pageInfo": Object {
      "endCursor": "cid_019",
      "hasNextPage": true,
      "hasPreviousPage": true,
      "startCursor": "cid_015",
    },
    "totalCount": 20,
  },
}
`;

exports[`prisma-relay-cursor-connection page based cursors returns the last 5 todos before the 5th todo 1`] = `
Object {
  "manyArgs": Array [
    Object {
      "cursor": Object {
        "id": "cid_5",
      },
      "skip": 1,
      "take": -6,
    },
  ],
  "result": Object {
    "edges": Array [
      Object {
        "cursor": "cid_1",
        "node": Object {
          "id": "cid_1",
          "isCompleted": false,
          "text": "occaecati a dolor",
        },
      },
      Object {
        "cursor": "cid_10",
        "node": Object {
          "id": "cid_10",
          "isCompleted": false,
          "text": "unde et quasi",
        },
      },
      Object {
        "cursor": "cid_2",
        "node": Object {
          "id": "cid_2",
          "isCompleted": false,
          "text": "ut enim quia",
        },
      },
      Object {
        "cursor": "cid_3",
        "node": Object {
          "id": "cid_3",
          "isCompleted": true,
          "text": "ipsam ipsam corrupti",
        },
      },
      Object {
        "cursor": "cid_4",
        "node": Object {
          "id": "cid_4",
          "isCompleted": true,
          "text": "voluptatem sint ipsam",
        },
      },
    ],
    "pageCursors": Object {
      "around": Array [
        Object {
          "cursor": "1-cid_5",
          "isCurrent": true,
          "page": 1,
        },
        Object {
          "cursor": "2-cid_5",
          "isCurrent": false,
          "page": 2,
        },
        Object {
          "cursor": "3-cid_5",
          "isCurrent": false,
          "page": 3,
        },
        Object {
          "cursor": "4-cid_5",
          "isCurrent": false,
          "page": 4,
        },
      ],
    },
    "pageInfo": Object {
      "endCursor": "cid_4",
      "hasNextPage": true,
      "hasPreviousPage": true,
      "startCursor": "cid_1",
    },
    "totalCount": 20,
  },
}
`;

exports[`prisma-relay-cursor-connection page based cursors returns the last 5 todos before the 6th todo 1`] = `
Object {
  "manyArgs": Array [
    Object {
      "cursor": Object {
        "id": "cid_u6",
      },
      "skip": 1,
      "take": -6,
    },
  ],
  "result": Object {
    "edges": Array [],
    "pageCursors": Object {
      "around": Array [
        Object {
          "cursor": "1-cid_u6",
          "isCurrent": true,
          "page": 1,
        },
        Object {
          "cursor": "2-cid_u6",
          "isCurrent": false,
          "page": 2,
        },
        Object {
          "cursor": "3-cid_u6",
          "isCurrent": false,
          "page": 3,
        },
        Object {
          "cursor": "4-cid_u6",
          "isCurrent": false,
          "page": 4,
        },
      ],
    },
    "pageInfo": Object {
      "endCursor": undefined,
      "hasNextPage": true,
      "hasPreviousPage": false,
      "startCursor": undefined,
    },
    "totalCount": 20,
  },
}
`;

exports[`prisma-relay-cursor-connection page based cursors returns the last 5 todos before the 16th todo 1`] = `
Object {
  "manyArgs": Array [
    Object {
      "cursor": Object {
        "id": "cid_16",
      },
      "skip": 1,
      "take": -6,
    },
  ],
  "result": Object {
    "edges": Array [],
    "pageCursors": Object {
      "around": Array [
        Object {
          "cursor": "1-cid_16",
          "isCurrent": true,
          "page": 1,
        },
        Object {
          "cursor": "2-cid_16",
          "isCurrent": false,
          "page": 2,
        },
        Object {
          "cursor": "3-cid_16",
          "isCurrent": false,
          "page": 3,
        },
        Object {
          "cursor": "4-cid_16",
          "isCurrent": false,
          "page": 4,
        },
      ],
    },
    "pageInfo": Object {
      "endCursor": undefined,
      "hasNextPage": true,
      "hasPreviousPage": false,
      "startCursor": undefined,
    },
    "totalCount": 20,
  },
}
`;

exports[`prisma-relay-cursor-connection page based cursors returns the paginated todos with the base client (sanity check) 1`] = `Array []`;

exports[`prisma-relay-cursor-connection string id returns all todos 1`] = `
{
  "edges": [
    {
      "cursor": "id_01",
      "node": {
        "id": "id_01",
        "isCompleted": false,
        "text": "veritatis molestias qui",
      },
    },
    {
      "cursor": "id_02",
      "node": {
        "id": "id_02",
        "isCompleted": false,
        "text": "occaecati a dolor",
      },
    },
    {
      "cursor": "id_03",
      "node": {
        "id": "id_03",
        "isCompleted": false,
        "text": "ut enim quia",
      },
    },
    {
      "cursor": "id_04",
      "node": {
        "id": "id_04",
        "isCompleted": true,
        "text": "ipsam ipsam corrupti",
      },
    },
    {
      "cursor": "id_05",
      "node": {
        "id": "id_05",
        "isCompleted": true,
        "text": "voluptatem sint ipsam",
      },
    },
    {
      "cursor": "id_06",
      "node": {
        "id": "id_06",
        "isCompleted": true,
        "text": "ut sunt consequuntur",
      },
    },
    {
      "cursor": "id_07",
      "node": {
        "id": "id_07",
        "isCompleted": false,
        "text": "accusamus aut labore",
      },
    },
    {
      "cursor": "id_08",
      "node": {
        "id": "id_08",
        "isCompleted": true,
        "text": "et quo quia",
      },
    },
    {
      "cursor": "id_09",
      "node": {
        "id": "id_09",
        "isCompleted": true,
        "text": "accusantium a excepturi",
      },
    },
    {
      "cursor": "id_10",
      "node": {
        "id": "id_10",
        "isCompleted": true,
        "text": "deserunt rerum occaecati",
      },
    },
    {
      "cursor": "id_11",
      "node": {
        "id": "id_11",
        "isCompleted": false,
        "text": "unde et quasi",
      },
    },
    {
      "cursor": "id_12",
      "node": {
        "id": "id_12",
        "isCompleted": false,
        "text": "et autem sapiente",
      },
    },
    {
      "cursor": "id_13",
      "node": {
        "id": "id_13",
        "isCompleted": false,
        "text": "deleniti fuga et",
      },
    },
    {
      "cursor": "id_14",
      "node": {
        "id": "id_14",
        "isCompleted": true,
        "text": "ea molestiae similique",
      },
    },
    {
      "cursor": "id_15",
      "node": {
        "id": "id_15",
        "isCompleted": false,
        "text": "doloribus ea aut",
      },
    },
    {
      "cursor": "id_16",
      "node": {
        "id": "id_16",
        "isCompleted": true,
        "text": "ut molestias veniam",
      },
    },
    {
      "cursor": "id_17",
      "node": {
        "id": "id_17",
        "isCompleted": true,
        "text": "a placeat aperiam",
      },
    },
    {
      "cursor": "id_18",
      "node": {
        "id": "id_18",
        "isCompleted": true,
        "text": "quos rerum aut",
      },
    },
    {
      "cursor": "id_19",
      "node": {
        "id": "id_19",
        "isCompleted": false,
        "text": "ullam a voluptatem",
      },
    },
    {
      "cursor": "id_20",
      "node": {
        "id": "id_20",
        "isCompleted": true,
        "text": "dolorum deserunt quis",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "id_20",
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startCursor": "id_01",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection string id returns the first 5 completed todos 1`] = `
{
  "edges": [
    {
      "cursor": "id_04",
      "node": {
        "id": "id_04",
        "isCompleted": true,
      },
    },
    {
      "cursor": "id_05",
      "node": {
        "id": "id_05",
        "isCompleted": true,
      },
    },
    {
      "cursor": "id_06",
      "node": {
        "id": "id_06",
        "isCompleted": true,
      },
    },
    {
      "cursor": "id_08",
      "node": {
        "id": "id_08",
        "isCompleted": true,
      },
    },
    {
      "cursor": "id_09",
      "node": {
        "id": "id_09",
        "isCompleted": true,
      },
    },
  ],
  "pageInfo": {
    "endCursor": "id_09",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "id_04",
  },
  "totalCount": 11,
}
`;

exports[`prisma-relay-cursor-connection string id returns the first 5 todos 1`] = `
{
  "edges": [
    {
      "cursor": "id_01",
      "node": {
        "id": "id_01",
        "isCompleted": false,
        "text": "veritatis molestias qui",
      },
    },
    {
      "cursor": "id_02",
      "node": {
        "id": "id_02",
        "isCompleted": false,
        "text": "occaecati a dolor",
      },
    },
    {
      "cursor": "id_03",
      "node": {
        "id": "id_03",
        "isCompleted": false,
        "text": "ut enim quia",
      },
    },
    {
      "cursor": "id_04",
      "node": {
        "id": "id_04",
        "isCompleted": true,
        "text": "ipsam ipsam corrupti",
      },
    },
    {
      "cursor": "id_05",
      "node": {
        "id": "id_05",
        "isCompleted": true,
        "text": "voluptatem sint ipsam",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "id_05",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "id_01",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection string id returns the first 5 todos after the 1st todo 1`] = `
{
  "edges": [
    {
      "cursor": "id_02",
      "node": {
        "id": "id_02",
        "isCompleted": false,
        "text": "occaecati a dolor",
      },
    },
    {
      "cursor": "id_03",
      "node": {
        "id": "id_03",
        "isCompleted": false,
        "text": "ut enim quia",
      },
    },
    {
      "cursor": "id_04",
      "node": {
        "id": "id_04",
        "isCompleted": true,
        "text": "ipsam ipsam corrupti",
      },
    },
    {
      "cursor": "id_05",
      "node": {
        "id": "id_05",
        "isCompleted": true,
        "text": "voluptatem sint ipsam",
      },
    },
    {
      "cursor": "id_06",
      "node": {
        "id": "id_06",
        "isCompleted": true,
        "text": "ut sunt consequuntur",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "id_06",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "id_02",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection string id returns the first 5 todos after the 5th todo 1`] = `
{
  "edges": [
    {
      "cursor": "id_06",
      "node": {
        "id": "id_06",
        "isCompleted": true,
        "text": "ut sunt consequuntur",
      },
    },
    {
      "cursor": "id_07",
      "node": {
        "id": "id_07",
        "isCompleted": false,
        "text": "accusamus aut labore",
      },
    },
    {
      "cursor": "id_08",
      "node": {
        "id": "id_08",
        "isCompleted": true,
        "text": "et quo quia",
      },
    },
    {
      "cursor": "id_09",
      "node": {
        "id": "id_09",
        "isCompleted": true,
        "text": "accusantium a excepturi",
      },
    },
    {
      "cursor": "id_10",
      "node": {
        "id": "id_10",
        "isCompleted": true,
        "text": "deserunt rerum occaecati",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "id_10",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "id_06",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection string id returns the first 5 todos after the 15th todo 1`] = `
{
  "edges": [
    {
      "cursor": "id_16",
      "node": {
        "id": "id_16",
        "isCompleted": true,
        "text": "ut molestias veniam",
      },
    },
    {
      "cursor": "id_17",
      "node": {
        "id": "id_17",
        "isCompleted": true,
        "text": "a placeat aperiam",
      },
    },
    {
      "cursor": "id_18",
      "node": {
        "id": "id_18",
        "isCompleted": true,
        "text": "quos rerum aut",
      },
    },
    {
      "cursor": "id_19",
      "node": {
        "id": "id_19",
        "isCompleted": false,
        "text": "ullam a voluptatem",
      },
    },
    {
      "cursor": "id_20",
      "node": {
        "id": "id_20",
        "isCompleted": true,
        "text": "dolorum deserunt quis",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "id_20",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "id_16",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection string id returns the first 5 todos after the 16th todo 1`] = `
{
  "edges": [
    {
      "cursor": "id_17",
      "node": {
        "id": "id_17",
        "isCompleted": true,
        "text": "a placeat aperiam",
      },
    },
    {
      "cursor": "id_18",
      "node": {
        "id": "id_18",
        "isCompleted": true,
        "text": "quos rerum aut",
      },
    },
    {
      "cursor": "id_19",
      "node": {
        "id": "id_19",
        "isCompleted": false,
        "text": "ullam a voluptatem",
      },
    },
    {
      "cursor": "id_20",
      "node": {
        "id": "id_20",
        "isCompleted": true,
        "text": "dolorum deserunt quis",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "id_20",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "id_17",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection string id returns the first 5 todos after the 20th todo 1`] = `
{
  "edges": [],
  "pageInfo": {
    "endCursor": undefined,
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": undefined,
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection string id returns the last 5 todos 1`] = `
{
  "edges": [
    {
      "cursor": "id_16",
      "node": {
        "id": "id_16",
        "isCompleted": true,
        "text": "ut molestias veniam",
      },
    },
    {
      "cursor": "id_17",
      "node": {
        "id": "id_17",
        "isCompleted": true,
        "text": "a placeat aperiam",
      },
    },
    {
      "cursor": "id_18",
      "node": {
        "id": "id_18",
        "isCompleted": true,
        "text": "quos rerum aut",
      },
    },
    {
      "cursor": "id_19",
      "node": {
        "id": "id_19",
        "isCompleted": false,
        "text": "ullam a voluptatem",
      },
    },
    {
      "cursor": "id_20",
      "node": {
        "id": "id_20",
        "isCompleted": true,
        "text": "dolorum deserunt quis",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "id_20",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "id_16",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection string id returns the last 5 todos before the 1st todo 1`] = `
{
  "edges": [],
  "pageInfo": {
    "endCursor": undefined,
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": undefined,
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection string id returns the last 5 todos before the 5th todo 1`] = `
{
  "edges": [
    {
      "cursor": "id_01",
      "node": {
        "id": "id_01",
        "isCompleted": false,
        "text": "veritatis molestias qui",
      },
    },
    {
      "cursor": "id_02",
      "node": {
        "id": "id_02",
        "isCompleted": false,
        "text": "occaecati a dolor",
      },
    },
    {
      "cursor": "id_03",
      "node": {
        "id": "id_03",
        "isCompleted": false,
        "text": "ut enim quia",
      },
    },
    {
      "cursor": "id_04",
      "node": {
        "id": "id_04",
        "isCompleted": true,
        "text": "ipsam ipsam corrupti",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "id_04",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "id_01",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection string id returns the last 5 todos before the 6th todo 1`] = `
{
  "edges": [
    {
      "cursor": "id_01",
      "node": {
        "id": "id_01",
        "isCompleted": false,
        "text": "veritatis molestias qui",
      },
    },
    {
      "cursor": "id_02",
      "node": {
        "id": "id_02",
        "isCompleted": false,
        "text": "occaecati a dolor",
      },
    },
    {
      "cursor": "id_03",
      "node": {
        "id": "id_03",
        "isCompleted": false,
        "text": "ut enim quia",
      },
    },
    {
      "cursor": "id_04",
      "node": {
        "id": "id_04",
        "isCompleted": true,
        "text": "ipsam ipsam corrupti",
      },
    },
    {
      "cursor": "id_05",
      "node": {
        "id": "id_05",
        "isCompleted": true,
        "text": "voluptatem sint ipsam",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "id_05",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "id_01",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection string id returns the last 5 todos before the 16th todo 1`] = `
{
  "edges": [
    {
      "cursor": "id_11",
      "node": {
        "id": "id_11",
        "isCompleted": false,
        "text": "unde et quasi",
      },
    },
    {
      "cursor": "id_12",
      "node": {
        "id": "id_12",
        "isCompleted": false,
        "text": "et autem sapiente",
      },
    },
    {
      "cursor": "id_13",
      "node": {
        "id": "id_13",
        "isCompleted": false,
        "text": "deleniti fuga et",
      },
    },
    {
      "cursor": "id_14",
      "node": {
        "id": "id_14",
        "isCompleted": true,
        "text": "ea molestiae similique",
      },
    },
    {
      "cursor": "id_15",
      "node": {
        "id": "id_15",
        "isCompleted": false,
        "text": "doloribus ea aut",
      },
    },
  ],
  "pageInfo": {
    "endCursor": "id_15",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "id_11",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection string id returns the paginated todos with the base client (sanity check) 1`] = `
[
  {
    "id": "id_06",
    "isCompleted": true,
    "text": "ut sunt consequuntur",
  },
  {
    "id": "id_07",
    "isCompleted": false,
    "text": "accusamus aut labore",
  },
  {
    "id": "id_08",
    "isCompleted": true,
    "text": "et quo quia",
  },
  {
    "id": "id_09",
    "isCompleted": true,
    "text": "accusantium a excepturi",
  },
  {
    "id": "id_10",
    "isCompleted": true,
    "text": "deserunt rerum occaecati",
  },
]
`;

exports[`prisma-relay-cursor-connection unique field returns the first 5 users after the 1st user 1`] = `
{
  "edges": [
    {
      "cursor": "eyJlbWFpbCI6InVzZXIyQGVtYWlsLmNvbSJ9",
      "node": {
        "email": "user2@email.com",
        "id": 2,
      },
    },
    {
      "cursor": "eyJlbWFpbCI6InVzZXIzQGVtYWlsLmNvbSJ9",
      "node": {
        "email": "user3@email.com",
        "id": 3,
      },
    },
    {
      "cursor": "eyJlbWFpbCI6InVzZXI0QGVtYWlsLmNvbSJ9",
      "node": {
        "email": "user4@email.com",
        "id": 4,
      },
    },
    {
      "cursor": "eyJlbWFpbCI6InVzZXI1QGVtYWlsLmNvbSJ9",
      "node": {
        "email": "user5@email.com",
        "id": 5,
      },
    },
    {
      "cursor": "eyJlbWFpbCI6InVzZXI2QGVtYWlsLmNvbSJ9",
      "node": {
        "email": "user6@email.com",
        "id": 6,
      },
    },
  ],
  "pageInfo": {
    "endCursor": "eyJlbWFpbCI6InVzZXI2QGVtYWlsLmNvbSJ9",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "eyJlbWFpbCI6InVzZXIyQGVtYWlsLmNvbSJ9",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection unique field returns the first 5 users after the 5th user 1`] = `
{
  "edges": [
    {
      "cursor": "eyJlbWFpbCI6InVzZXI2QGVtYWlsLmNvbSJ9",
      "node": {
        "email": "user6@email.com",
        "id": 6,
      },
    },
    {
      "cursor": "eyJlbWFpbCI6InVzZXI3QGVtYWlsLmNvbSJ9",
      "node": {
        "email": "user7@email.com",
        "id": 7,
      },
    },
    {
      "cursor": "eyJlbWFpbCI6InVzZXI4QGVtYWlsLmNvbSJ9",
      "node": {
        "email": "user8@email.com",
        "id": 8,
      },
    },
    {
      "cursor": "eyJlbWFpbCI6InVzZXI5QGVtYWlsLmNvbSJ9",
      "node": {
        "email": "user9@email.com",
        "id": 9,
      },
    },
    {
      "cursor": "eyJlbWFpbCI6InVzZXIxMEBlbWFpbC5jb20ifQ==",
      "node": {
        "email": "user10@email.com",
        "id": 10,
      },
    },
  ],
  "pageInfo": {
    "endCursor": "eyJlbWFpbCI6InVzZXIxMEBlbWFpbC5jb20ifQ==",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "eyJlbWFpbCI6InVzZXI2QGVtYWlsLmNvbSJ9",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection unique field returns the first 5 users after the 15th user 1`] = `
{
  "edges": [
    {
      "cursor": "eyJlbWFpbCI6InVzZXIxNkBlbWFpbC5jb20ifQ==",
      "node": {
        "email": "user16@email.com",
        "id": 16,
      },
    },
    {
      "cursor": "eyJlbWFpbCI6InVzZXIxN0BlbWFpbC5jb20ifQ==",
      "node": {
        "email": "user17@email.com",
        "id": 17,
      },
    },
    {
      "cursor": "eyJlbWFpbCI6InVzZXIxOEBlbWFpbC5jb20ifQ==",
      "node": {
        "email": "user18@email.com",
        "id": 18,
      },
    },
    {
      "cursor": "eyJlbWFpbCI6InVzZXIxOUBlbWFpbC5jb20ifQ==",
      "node": {
        "email": "user19@email.com",
        "id": 19,
      },
    },
    {
      "cursor": "eyJlbWFpbCI6InVzZXIyMEBlbWFpbC5jb20ifQ==",
      "node": {
        "email": "user20@email.com",
        "id": 20,
      },
    },
  ],
  "pageInfo": {
    "endCursor": "eyJlbWFpbCI6InVzZXIyMEBlbWFpbC5jb20ifQ==",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "eyJlbWFpbCI6InVzZXIxNkBlbWFpbC5jb20ifQ==",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection unique field returns the first 5 users after the 16th user 1`] = `
{
  "edges": [
    {
      "cursor": "eyJlbWFpbCI6InVzZXIxN0BlbWFpbC5jb20ifQ==",
      "node": {
        "email": "user17@email.com",
        "id": 17,
      },
    },
    {
      "cursor": "eyJlbWFpbCI6InVzZXIxOEBlbWFpbC5jb20ifQ==",
      "node": {
        "email": "user18@email.com",
        "id": 18,
      },
    },
    {
      "cursor": "eyJlbWFpbCI6InVzZXIxOUBlbWFpbC5jb20ifQ==",
      "node": {
        "email": "user19@email.com",
        "id": 19,
      },
    },
    {
      "cursor": "eyJlbWFpbCI6InVzZXIyMEBlbWFpbC5jb20ifQ==",
      "node": {
        "email": "user20@email.com",
        "id": 20,
      },
    },
  ],
  "pageInfo": {
    "endCursor": "eyJlbWFpbCI6InVzZXIyMEBlbWFpbC5jb20ifQ==",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "eyJlbWFpbCI6InVzZXIxN0BlbWFpbC5jb20ifQ==",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection unique field returns the first 5 users after the 20th user 1`] = `
{
  "edges": [],
  "pageInfo": {
    "endCursor": undefined,
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": undefined,
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection unique field returns the last 5 users before the 1st user 1`] = `
{
  "edges": [],
  "pageInfo": {
    "endCursor": undefined,
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": undefined,
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection unique field returns the last 5 users before the 5th user 1`] = `
{
  "edges": [
    {
      "cursor": "eyJlbWFpbCI6InVzZXIxQGVtYWlsLmNvbSJ9",
      "node": {
        "email": "user1@email.com",
        "id": 1,
      },
    },
    {
      "cursor": "eyJlbWFpbCI6InVzZXIyQGVtYWlsLmNvbSJ9",
      "node": {
        "email": "user2@email.com",
        "id": 2,
      },
    },
    {
      "cursor": "eyJlbWFpbCI6InVzZXIzQGVtYWlsLmNvbSJ9",
      "node": {
        "email": "user3@email.com",
        "id": 3,
      },
    },
    {
      "cursor": "eyJlbWFpbCI6InVzZXI0QGVtYWlsLmNvbSJ9",
      "node": {
        "email": "user4@email.com",
        "id": 4,
      },
    },
  ],
  "pageInfo": {
    "endCursor": "eyJlbWFpbCI6InVzZXI0QGVtYWlsLmNvbSJ9",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "eyJlbWFpbCI6InVzZXIxQGVtYWlsLmNvbSJ9",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection unique field returns the last 5 users before the 6th user 1`] = `
{
  "edges": [
    {
      "cursor": "eyJlbWFpbCI6InVzZXIxQGVtYWlsLmNvbSJ9",
      "node": {
        "email": "user1@email.com",
        "id": 1,
      },
    },
    {
      "cursor": "eyJlbWFpbCI6InVzZXIyQGVtYWlsLmNvbSJ9",
      "node": {
        "email": "user2@email.com",
        "id": 2,
      },
    },
    {
      "cursor": "eyJlbWFpbCI6InVzZXIzQGVtYWlsLmNvbSJ9",
      "node": {
        "email": "user3@email.com",
        "id": 3,
      },
    },
    {
      "cursor": "eyJlbWFpbCI6InVzZXI0QGVtYWlsLmNvbSJ9",
      "node": {
        "email": "user4@email.com",
        "id": 4,
      },
    },
    {
      "cursor": "eyJlbWFpbCI6InVzZXI1QGVtYWlsLmNvbSJ9",
      "node": {
        "email": "user5@email.com",
        "id": 5,
      },
    },
  ],
  "pageInfo": {
    "endCursor": "eyJlbWFpbCI6InVzZXI1QGVtYWlsLmNvbSJ9",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "eyJlbWFpbCI6InVzZXIxQGVtYWlsLmNvbSJ9",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection unique field returns the last 5 users before the 16th user 1`] = `
{
  "edges": [
    {
      "cursor": "eyJlbWFpbCI6InVzZXIxMUBlbWFpbC5jb20ifQ==",
      "node": {
        "email": "user11@email.com",
        "id": 11,
      },
    },
    {
      "cursor": "eyJlbWFpbCI6InVzZXIxMkBlbWFpbC5jb20ifQ==",
      "node": {
        "email": "user12@email.com",
        "id": 12,
      },
    },
    {
      "cursor": "eyJlbWFpbCI6InVzZXIxM0BlbWFpbC5jb20ifQ==",
      "node": {
        "email": "user13@email.com",
        "id": 13,
      },
    },
    {
      "cursor": "eyJlbWFpbCI6InVzZXIxNEBlbWFpbC5jb20ifQ==",
      "node": {
        "email": "user14@email.com",
        "id": 14,
      },
    },
    {
      "cursor": "eyJlbWFpbCI6InVzZXIxNUBlbWFpbC5jb20ifQ==",
      "node": {
        "email": "user15@email.com",
        "id": 15,
      },
    },
  ],
  "pageInfo": {
    "endCursor": "eyJlbWFpbCI6InVzZXIxNUBlbWFpbC5jb20ifQ==",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "eyJlbWFpbCI6InVzZXIxMUBlbWFpbC5jb20ifQ==",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection unique field returns the paginated users with the base client (sanity check) 1`] = `
[
  {
    "email": "user6@email.com",
    "id": 6,
  },
  {
    "email": "user7@email.com",
    "id": 7,
  },
  {
    "email": "user8@email.com",
    "id": 8,
  },
  {
    "email": "user9@email.com",
    "id": 9,
  },
  {
    "email": "user10@email.com",
    "id": 10,
  },
]
`;
